test-cases/negative/test_066_variable_redeclaration.lay
# negative test: redeclaring same variable
# expected: type checker should catch this

the variable x of type Number is 5
the variable x of type Number is 10


